<resources>
    <string name="locale">En</string>

    <string name="appName">Wizard Camera</string>
    <string name="appSystemName">WizardCamera</string>

    <string name="ok">OK</string>

    <string name="captureMenuText">Capture</string>

    <string name="capturing">Capturing…</string>

    <string name="filterOriginal">No filters</string>
    <string name="filterEdgeDetection">Edges detection</string>
    <string name="filterPixelize">Pixelize</string>
    <string name="filterTrianglesMosaic">Triangles mosaic</string>
    <string name="filterLegofied">Legofied</string>
    <string name="filterTileMosaic">Tile mosaic</string>
    <string name="filterBlueorange">Blue and Orange</string>
    <string name="filterBasicDeform">Basic deform</string>
    <string name="filterContrast">Contrast</string>
    <string name="filterNoiseWarp">Noise warp</string>
    <string name="filterRefraction">Refraction</string>
    <string name="filterMapping">Mapping</string>
    <string name="filterCrosshatch">Crosshatch</string>
    <string name="filterNewspaper">Newspaper</string>
    <string name="filterAsciiArt">Ascii art</string>
    <string name="filterMoney">Money filter</string>
    <string name="filterCracked">Cracked</string>
    <string name="filterPolygonization">Polygonization</string>
    <string name="filterBlackAndWhite">Black and White</string>
    <string name="filterGray">Gray</string>
    <string name="filterNegative">Negative</string>
    <string name="filterNostalgia">Nostalgia</string>
    <string name="filterCasting">Casting</string>
    <string name="filterRelief">Relief</string>
    <string name="filterSwirl">Swirl</string>
    <string name="filterHexagonMosaic">Hexagon mosaic</string>
    <string name="filterMirror">Mirror</string>
    <string name="filterTriple">Triple</string>
    <string name="filterCartoon">Cartoon</string>
    <string name="filterWaterReflection">Water reflection</string>

    <string name="standardFilterBrightness">Brightness</string>
    <string name="standardFilterContrast">Contrast</string>
    <string name="standardFilterSaturation">Saturation</string>
    <string name="standardFilterTemperature">Temperature</string>

    <string name="needCameraPermissionExit">You need to grant Camera permission  to use this application</string>
    <string name="photoSaved">A photo has been saved</string>

    <string name="focusAuto">Focus mode: Auto</string>
    <string name="focusManual">Focus mode: Manual</string>

    <string name="zoomFactor">Zoom: </string>/

    <string name="generalError">Unfortunately, an error was encountered during the operation.</string>
    <string name="capturingInProgressError">Capturing in progress, wait, please.</string>

    <string name="deletePhotoQuestion">Are you sure you want to delete the photo?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="sendTo">Send to…</string>

    <string name="emptyGallery">The gallery is empty</string>
    <string name="emptyFiltersList">There are no filters in this list</string>

    <string name="inverted">Inverted</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="blockSize">Block size</string>
    <string name="triangleSize">Triangle size</string>
    <string name="totalShards">Total shards</string>
    <string name="randomShards">Random shards</string>
    <string name="size">Size</string>
    <string name="rotation">Rotation</string>
    <string name="invertedRotation">Inverted rotation</string>
    <string name="tileSize">Tile size</string>
    <string name="borderSize">Border size</string>
    <string name="horizontal">Horizontal</string>
    <string name="grayscale">Grayscale</string>
    <string name="mixFactor">Mixture factor</string>

    <string name="filterEdgeDetectionSettings">Edges detection settings</string>
    <string name="filterBlackAndWhiteSettings">Black and White settings</string>
    <string name="filterLegofiedSettings">Legofied settings</string>
    <string name="filterTrianglesMosaicSettings">Triangles mosaic settings</string>
    <string name="filterHexagonMosaicSettings">Hexagon mosaic settings</string>
    <string name="filterCrackedSettings">Cracked settings</string>
    <string name="filterSwirlSettings">Swirl settings</string>
    <string name="filterTileMosaicSettings">Tile mosaic settings</string>
    <string name="filterTripleSettings">Triple settings</string>
    <string name="filterNewspaperSettings">Newspaper settings</string>
    <string name="filterMappingSettings">Mapping settings</string>

    <string name="filterBrightnessSettings">Brightness settings</string>
    <string name="filterContrastSettings">Contrast settings</string>
    <string name="filterSaturationSettings">Saturation settings</string>
    <string name="filterTemperatureSettings">Temperature settings</string>

    <string name="camera_2_warning">This device does not support Camera 2 API completely. You can\'t use this application on it, sorry</string>

    <string name="camera_flash_on">Camera flash: On</string>
    <string name="camera_flash_off">Camera flash: Off</string>

    <string name="magic_mode_on">Magic mode: On</string>
    <string name="magic_mode_off">Magic mode: Off</string>

    <string name="savePhotoQuestion">The photo has been updated. Would you like to save it?</string>
    <string name="savePhotoSave">Save</string>
    <string name="savePhotoCancel">Exit without saving</string>
</resources>
