<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/capture"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/capture_menu_text"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/filterOriginal"
        android:title="@string/filterOriginal"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterEdgeDectection"
        android:title="@string/filterEdgeDectection"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterPixelize"
        android:title="@string/filterPixelize"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterEMInterference"
        android:title="@string/filterEMInterference"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterTrianglesMosaic"
        android:title="@string/filterTrianglesMosaic"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterLegofied"
        android:title="@string/filterLegofied"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterTileMosaic"
        android:title="@string/filterTileMosaic"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterBlueorange"
        android:title="@string/filterBlueorange"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterChromaticAberration"
        android:title="@string/filterChromaticAberration"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterBasicDeform"
        android:title="@string/filterBasicDeform"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterContrast"
        android:title="@string/filterContrast"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterNoiseWarp"
        android:title="@string/filterNoiseWarp"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterRefraction"
        android:title="@string/filterRefraction"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterMapping"
        android:title="@string/filterMapping"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterCrosshatch"
        android:title="@string/filterCrosshatch"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterLichtensteinEsque"
        android:title="@string/filterLichtensteinEsque"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterAsciiArt"
        android:title="@string/filterAsciiArt"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterMoney"
        android:title="@string/filterMoney"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterCracked"
        android:title="@string/filterCracked"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterPolygonization"
        android:title="@string/filterPolygonization"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterBlackAndWhite"
        android:title="@string/filterBlackAndWhite"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterGray"
        android:title="@string/filterGray"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterNegative"
        android:title="@string/filterNegative"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterNostalgia"
        android:title="@string/filterNostalgia"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterCasting"
        android:title="@string/filterCasting"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterRelief"
        android:title="@string/filterRelief"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterSwirl"
        android:title="@string/filterSwirl"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterHexagonMosaic"
        android:title="@string/filterHexagonMosaic"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterMirror"
        android:title="@string/filterMirror"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterTriple"
        android:title="@string/filterTriple"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterCartoon"
        android:title="@string/filterCartoon"
        app:showAsAction="never" />

    <item
        android:id="@+id/filterWaterReflection"
        android:title="@string/filterWaterReflection"
        app:showAsAction="never" />

</menu>
