<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        style="@style/WizCam.TextStyle.SingleLine.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sizeBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="@dimen/marginNormal"

        app:layout_constraintTop_toBottomOf="@+id/titleTextSize"
         />

    <TextView
        android:id="@+id/titleTextRotation"
        style="@style/WizCam.TextStyle.SingleLine.Small"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/rotation"

        android:layout_marginTop="@dimen/marginLarge"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeBar" />

    <SeekBar
        android:id="@+id/rotationBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="@dimen/marginNormal"

        app:layout_constraintTop_toBottomOf="@+id/titleTextRotation"
         />

    <CheckBox
        android:id="@+id/invertedRotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/invertedRotation"

        style="@style/WizCam.TextStyle.SingleLine.Small"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotationBar"

        android:layout_marginTop="@dimen/marginLarge"

        />
</androidx.constraintlayout.widget.ConstraintLayout>